# SymLink-Gui

./: LICENSE  README.md  package.bat  pyproject.toml
src/: main.py  service.py  settings.py  ui.py
