[tool.poetry]
name = "symlink-gui"
version = "0.1.0"
description = ""
authors = ["HeMOu <fangqichenchao@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tkinterdnd2 = "^0.4.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
